<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal_1"
        android:layout_marginTop="@dimen/margin_normal_1"
        android:background="@drawable/ripple"
        android:padding="@dimen/margin_min_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal_2"
        android:text="@string/create_counter"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_big"
        app:layout_constraintBottom_toBottomOf="@id/close"
        app:layout_constraintStart_toEndOf="@id/close"
        app:layout_constraintTop_toTopOf="@id/close" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_min_1"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/close" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/margin_normal_3"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/counterTitleInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal_2"
        android:layout_marginTop="@dimen/margin_normal_3"
        android:hint="@string/counter_name_label"
        android:theme="@style/EditTextThemeAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:placeholderText="@string/counter_name_hint"
        app:placeholderTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textShortMessage"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/seeSuggestions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal_1"
        android:layout_marginTop="@dimen/margin_min_1"
        android:background="@drawable/ripple"
        android:padding="@dimen/margin_min_1"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counterTitleInput"
        tools:text="@string/create_counter_disclaimer" />

</androidx.constraintlayout.widget.ConstraintLayout>